set browser tab title

--- a/templates/base_budgets.html
+++ b/templates/base_budgets.html
@@ -1,6 +1,7 @@
 {% extends "base_main.html" %}
 {% load paginator filters %}
 
+{% block title %}Budgets{% endblock title %}
 {% block tab_budgets %}active{% endblock %}
 
 {% block nav_secondary %}
