--- a/templates/base_orders.html
+++ b/templates/base_orders.html
@@ -1,6 +1,7 @@
 {% extends "base_main.html" %}
 {% load filters %}
 
+{% block title %}Commandes{% endblock title %}
 {% block tab_orders %}active{% endblock %}
 
 {% block nav_secondary %}
