--- a/templates/base_preferences.html
+++ b/templates/base_preferences.html
@@ -1,6 +1,7 @@
 {% extends "base_main.html" %}
 {% load paginator filters %}
 
+{% block title %}Préférences{% endblock title %}
 {% block tab_preferences %}active{% endblock %}
 
 {% block nav_secondary %}
