--- a/templates/base_products.html
+++ b/templates/base_products.html
@@ -1,6 +1,7 @@
 {% extends "base_main.html" %}
 {% load filters %}
 
+{% block title %}Produits{% endblock title %}
 {% block menu_product %}active{% endblock %}
 
 {% block nav_secondary %}
