--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -1,6 +1,7 @@
 {% extends "base_main.html" %}
 {% load filters %}
 
+{% block title %}Administration{% endblock title %}
 {% block tab_admin %}active{% endblock %}
 
 {% block nav_secondary %}
