--- a/templates/base_history.html
+++ b/templates/base_history.html
@@ -1,6 +1,7 @@
 {% extends "base_main.html" %}
 {% load filters %}
 
+{% block title %}Historique{% endblock title %}
 {% block menu_history %}active{% endblock %}
 
 {% block nav_secondary %}
