--- a/templates/base_provider.html
+++ b/templates/base_provider.html
@@ -1,6 +1,7 @@
 {% extends "base_main.html" %}
 {% load filters %}
 
+{% block title %}Fournisseurs{% endblock title %}
 {% block menu_provider %}active{% endblock %}
 
 {% block nav_secondary %}
