--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -19,7 +19,7 @@
 		<th>Date</th>
 		<th>Expiration</th>
 		<th>Information</th>
-		<th></th>
+		<th width="40px"></th>
 	</thead>
 	<tbody>
 		{% for info in infos %}
