add "provider" field to info form

--- a/templates/infos/new.html
+++ b/templates/infos/new.html
@@ -12,6 +12,9 @@
 <form action="{% url info_new %}" method="POST">{% csrf_token %}
 	<h3>Nouvelle information</h3>
 	<fieldset>
+		<label for="provider">Fournisseur</label>
+		<input type="text" name="provider" id="provider" />
+		<div class="cleaner"></div>
   {% for field in form %}
     {% include "form_snippet.html"%}
   {% endfor %}
