added app name to web pages

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -4,7 +4,7 @@
 
 <head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<title>Commandes LBCMCP - login</title>
+		<title>BCG-Lab - login</title>
 		<link rel="stylesheet" href="{{ MEDIA_URL }}css/login.css" type="text/css" />
 		<link rel="stylesheet" href="{{ MEDIA_URL }}css/humanity/jquery-ui-1.8.16.custom.css" type="text/css" />
 		
