Added comments field to search forms

--- a/templates/history/search_form.html
+++ b/templates/history/search_form.html
@@ -39,6 +39,10 @@
 				<td>Sous-type:</td>
 				<td>{{ filter_form.items__sub_category }}</td>
 			</tr>
+                        <tr>
+                                <td>Commentaire:</td>
+                                <td>{{ filter_form.comments }}</td>
+                        </tr>
 		</table>
 		<div class="cleaner"></div>
 		<button type="submit" class="all">Chercher</button>
