--- a/templates/order/_search_form.html
+++ b/templates/order/_search_form.html
@@ -30,6 +30,9 @@
 				<td>N°cmde:</td>
 				<td>{{ filter_form.number }}</td>
 				<td width="10%"></td>
+				<td>Commentaire:</td>
+				<td>{{ filter_form.notes }}</td>
+				<td width="10%"></td>
 			</tr>
 		</table>
 		<div class="cleaner"></div>
