Search on comments that *contain*

--- a/templates/history/search_form.html
+++ b/templates/history/search_form.html
@@ -41,7 +41,7 @@
 			</tr>
                         <tr>
                                 <td>Commentaire:</td>
-                                <td>{{ filter_form.comments }}</td>
+                                <td>{{ filter_form.comments__icontains }}</td>
                         </tr>
 		</table>
 		<div class="cleaner"></div>
