--- a/templates/order/_search_form.html
+++ b/templates/order/_search_form.html
@@ -31,7 +31,7 @@
 				<td>{{ filter_form.number }}</td>
 				<td width="10%"></td>
 				<td>Commentaire:</td>
-				<td>{{ filter_form.notes }}</td>
+				<td>{{ filter_form.notes__icontains }}</td>
 				<td width="10%"></td>
 			</tr>
 		</table>
