--- a/templates/base.html
+++ b/templates/base.html
@@ -9,10 +9,12 @@
 <link rel="stylesheet" href="{{ MEDIA_URL }}css/humanity/jquery-ui-1.8.16.custom.css" type="text/css" />
 <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}css/style.css" />
 <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}css/form.css" />
+<link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}css/autocomplete.css" />
 
-<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-1.6.4.min.js"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-1.8.2.min.js"></script>
 <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-ui-1.8.16.custom.min.js"></script>
 <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.ui.datepicker-fr.js"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.autocomplete.js"></script>
 <script type="text/javascript" src="{{ MEDIA_URL }}js/base.js"></script>
 
 <!--[if !IE 7]>
