migrating to django 1.5

--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -1,5 +1,5 @@
 {% extends "base_main.html" %}
-{% load filters %}
+{% load filters static %}
 
 {% block title %}Administration{% endblock title %}
 {% block tab_admin %}active{% endblock %}
