--- a/templates/base_history.html
+++ b/templates/base_history.html
@@ -1,5 +1,5 @@
 {% extends "base_main.html" %}
-{% load filters %}
+{% load filters static %}
 
 {% block title %}Historique{% endblock title %}
 {% block menu_history %}active{% endblock %}
