--- a/templates/budgetlines/search_form.html
+++ b/templates/budgetlines/search_form.html
@@ -55,5 +55,5 @@
 <br />
 
 <div class="saving">
-	<img src="{% static 'img/layout/wait.gif" %} />
+	<img src="{% static 'img/layout/wait.gif' %}" />
 </div>
