--- a/templates/history/search_form.html
+++ b/templates/history/search_form.html
@@ -1,57 +1,58 @@
+{% load static %}
 <div class="bar">
-		<a href="#" class="expand">Dérouler</a>
-		<a href="#" class="hide">Cacher</a>
-		<h4>Recherche de commandes réceptionnées</h4>
+    <a href="#" class="expand">Dérouler</a>
+    <a href="#" class="hide">Cacher</a>
+    <h4>Recherche de commandes réceptionnées</h4>
 </div>
 <div class="bar_content">
-	<form action="{% url 'history_orders' %}" method="GET" class="show_wait">{% csrf_token %}
-		<strong>Chercher les commandes qui correspondent à {{ filter_form.connector }} conditions suivantes:</strong>
-		<div class="cleaner"></div>
-		<table>
-			<tr>
-				<td>Equipe:</td>
-				<td>{{ filter_form.team }}</td>
-				<td width="10%"></td>
-				<td>N° de commande:</td>
-				<td>{{ filter_form.number }}</td>
-				<td width="5%"></td>
-				<td>Date de réception (min/max):</td>
-				<td>{{ filter_form.date_delivered__gte }}</td>
-				<td>{{ filter_form.date_delivered__lte }}</td>
-			</tr>
-			<tr>
-				<td>Fournisseur:</td>
-				<td>{{ filter_form.provider }}</td>
-				<td width="5%"></td>
-				<td>Fournisseur d'origine:</td>
-				<td>{{ filter_form.items__origin }}</td>
-				<td width="5%"></td>
-				<td>Type:</td>
-				<td>{{ filter_form.items__category }}</td>
-			</tr>
-			<tr>
-				<td>Désignation:</td>
-				<td>{{ filter_form.items__name }}</td>
-				<td width="5%"></td>
-				<td>Référence:</td>
-				<td>{{ filter_form.items__reference }}</td>
-				<td width="5%"></td>
-				<td>Sous-type:</td>
-				<td>{{ filter_form.items__sub_category }}</td>
-			</tr>
-                        <tr>
-                                <td>Commentaire:</td>
-                                <td>{{ filter_form.comments__icontains }}</td>
-                        </tr>
-		</table>
-		<div class="cleaner"></div>
-		<button type="submit" class="all">Chercher</button>
-		<a href="{% url 'history_orders' %}" class="refresh">Liste globale</a>
-	</form>
+  <form action="{% url 'history_orders' %}" method="GET" class="show_wait">{% csrf_token %}
+    <strong>Chercher les commandes qui correspondent à {{ filter_form.connector }} conditions suivantes:</strong>
+    <div class="cleaner"></div>
+    <table>
+      <tr>
+        <td>Equipe:</td>
+        <td>{{ filter_form.team }}</td>
+        <td width="10%"></td>
+        <td>N° de commande:</td>
+        <td>{{ filter_form.number }}</td>
+        <td width="5%"></td>
+        <td>Date de réception (min/max):</td>
+        <td>{{ filter_form.date_delivered__gte }}</td>
+        <td>{{ filter_form.date_delivered__lte }}</td>
+      </tr>
+      <tr>
+        <td>Fournisseur:</td>
+        <td>{{ filter_form.provider }}</td>
+        <td width="5%"></td>
+        <td>Fournisseur d'origine:</td>
+        <td>{{ filter_form.items__origin }}</td>
+        <td width="5%"></td>
+        <td>Type:</td>
+        <td>{{ filter_form.items__category }}</td>
+      </tr>
+      <tr>
+        <td>Désignation:</td>
+        <td>{{ filter_form.items__name }}</td>
+        <td width="5%"></td>
+        <td>Référence:</td>
+        <td>{{ filter_form.items__reference }}</td>
+        <td width="5%"></td>
+        <td>Sous-type:</td>
+        <td>{{ filter_form.items__sub_category }}</td>
+      </tr>
+      <tr>
+        <td>Commentaire:</td>
+        <td>{{ filter_form.comments__icontains }}</td>
+      </tr>
+    </table>
+    <div class="cleaner"></div>
+    <button type="submit" class="all">Chercher</button>
+    <a href="{% url 'history_orders' %}" class="refresh">Liste globale</a>
+  </form>
 </div>
 <div class="cleaner"></div>
 <br />
 
 <div class="saving">
-	<img src="{% static 'img/layout/wait.gif" %} />
+  <img src="{% static 'img/layout/wait.gif' %}" />
 </div>
