--- a/templates/order/_dialogs.html
+++ b/templates/order/_dialogs.html
@@ -1,4 +1,4 @@
-{% load filters %}
+{% load filters static %}
 
 <div id="confirmDel" class="dialog" title="Confirmer la suppression">
   Merci de confirmer la suppression.
