--- a/templates/order/_search_form.html
+++ b/templates/order/_search_form.html
@@ -1,4 +1,4 @@
-{% load filters %}
+{% load filters static %}
 
 <div class="bar">
 	<a href="#" class="expand">Dérouler</a>
@@ -46,5 +46,5 @@
 <br />
 
 <div class="saving">
-	<img src="{% static 'img/layout/wait.gif" %} />
+	<img src="{% static 'img/layout/wait.gif' %}" />
 </div>
