--- a/templates/order/orderitem_detail.html
+++ b/templates/order/orderitem_detail.html
@@ -1,5 +1,5 @@
 {% extends "base_orders.html" %}
-{% load filters %}
+{% load filters static %}
 {% block menu_order %}active{% endblock %}
 
 {% block header %}
