--- a/templates/product/search.html
+++ b/templates/product/search.html
@@ -13,7 +13,7 @@
 </form>
 <div class="cleaner"></div>
 <div class="saving">
-	<img src="{% static 'img/layout/wait.gif" %} />
+	<img src="{% static 'img/layout/wait.gif' %}" />
 </div>
 
 {% if query and numFound %}
