--- a/templates/provider/import.html
+++ b/templates/provider/import.html
@@ -1,5 +1,5 @@
 {% extends "base_provider.html" %}
-{% load filters %}
+{% load filters static %}
 {% block provider_list %}active{% endblock %}
 
 {% block header %}
