--- a/templates/provider/import_preview.html
+++ b/templates/provider/import_preview.html
@@ -1,7 +1,7 @@
 {# PAGE FOURNISSEUR #}
 
 {% extends "base_provider.html" %}
-{% load filters %}
+{% load filters static %}
 {% block provider_list %}active{% endblock %}
 
 {% block header %}
