--- a/templates/team/item.html
+++ b/templates/team/item.html
@@ -1,5 +1,5 @@
 {% extends "base_admin.html" %}
-{% load filters %}
+{% load filters static %}
 {% block menu_team %}active{% endblock %}
 
 {% block header %}Modification d'équipe{% endblock %}
