--- a/templates/admin/group_item.html
+++ b/templates/admin/group_item.html
@@ -1,5 +1,5 @@
 {% extends "base_admin.html" %}
-{% load filters %}
+{% load filters static %}
 {% block menu_group %}active{% endblock %}
 
 {% block header %}
