--- a/templates/admin/maintenance.html
+++ b/templates/admin/maintenance.html
@@ -1,5 +1,5 @@
 {% extends "base_admin.html" %}
-{% load filters %}
+{% load filters static %}
 {% block menu_maintenance %}active{% endblock %}
 
 {% block header %}
