--- a/templates/admin/perm_index.html
+++ b/templates/admin/perm_index.html
@@ -1,5 +1,5 @@
 {% extends "base_admin.html" %}
-{% load filters %}
+{% load filters static %}
 {% block menu_permission %}active{% endblock %}
 
 {% block header %}
