--- a/templates/attachments/form.html
+++ b/templates/attachments/form.html
@@ -1,5 +1,5 @@
 {% extends "base_main.html" %}
-{% load filters %}
+{% load filters static %}
 
 {% block content %}
 	<form action="{% url 'attachment_new' %}" method="post" enctype="multipart/form-data">{% csrf_token %}
