--- a/templates/base_orders.html
+++ b/templates/base_orders.html
@@ -1,5 +1,5 @@
 {% extends "base_main.html" %}
-{% load filters %}
+{% load filters static %}
 
 {% block title %}Commandes{% endblock title %}
 {% block tab_orders %}active{% endblock %}
