--- a/templates/base_provider.html
+++ b/templates/base_provider.html
@@ -1,5 +1,5 @@
 {% extends "base_main.html" %}
-{% load filters %}
+{% load filters static %}
 
 {% block title %}Fournisseurs{% endblock title %}
 {% block menu_provider %}active{% endblock %}
