--- a/templates/history/search_form_budgets.html
+++ b/templates/history/search_form_budgets.html
@@ -53,5 +53,5 @@
 <br />
 
 <div class="saving">
-	<img src="{% static 'img/layout/wait.gif" %} />
+	<img src="{% static 'img/layout/wait.gif' %}" />
 </div>
