--- a/templates/order/add_debit.html
+++ b/templates/order/add_debit.html
@@ -1,5 +1,5 @@
 {% extends "base_orders.html" %}
-{% load filters %}
+{% load filters static %}
 {% block header %}<h1>Fournisseur: {{ order.provider }}</h1>{% endblock %}
 
 {% block content %}
