--- a/templates/product/item.html
+++ b/templates/product/item.html
@@ -1,5 +1,5 @@
 {% extends "base_products.html" %}
-{% load filters %}
+{% load filters static %}
 {% block product_list %}active{% endblock %}
 
 {% block header %}
