--- a/templates/provider/index.html
+++ b/templates/provider/index.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 <div class="saving">
-	<img src="{% static 'img/layout/wait.gif" %} />
+	<img src="{% static 'img/layout/wait.gif' %}" />
 </div>
 
 {% if provider_list %}
