updated jquery and jquery ui versions

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -8,11 +8,10 @@
 		<link rel="stylesheet" href="{% static 'css/login.css' %}" type="text/css" />
 		<link rel="stylesheet" href="{% static 'css/humanity/jquery-ui-1.8.16.custom.css' %}" type="text/css" />
 		
-		<script type="text/javascript" src="{% static 'js/jquery-1.6.4.min.js'%} "></script>
-		<script type="text/javascript" src="{% static 'js/jquery-ui-1.8.16.custom.min.js'%}"></script>
-		<script type="text/javascript" src="{% static 'js/jquery.ui.datepicker-fr.js'%}"></script>
-		
-		<script type="text/javascript" src="{% static 'js/base.js'%}"></script>
+    <script type="text/javascript" src="{% static 'js/jquery-1.9.1.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/jquery-ui.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/jquery.ui.datepicker-fr.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/base.js' %}"></script>
 </head>
 
 <body>
