--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,8 @@
   <link rel="stylesheet" href="{% static 'css/form.css' %}" type="text/css" />
   <link rel="stylesheet" href="{% static 'css/autocomplete.css' %}" type="text/css" />
 
-  <script type="text/javascript" src="{% static 'js/jquery-1.8.2.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/jquery-ui-1.8.16.custom.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/jquery-1.9.1.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/jquery-ui.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/jquery.ui.datepicker-fr.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/jquery.autocomplete.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/base.js' %}"></script>
