prevent google parsing

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="MSSmartTagsPreventParsing" content="TRUE" />
+  <meta name="robots" content="noindex, nofollow">
   <title>BCG-Lab - {% block title %}{% endblock %}</title>
   <link rel="stylesheet" href="{% static 'css/humanity/jquery-ui-1.10.3.custom.css' %}" type="text/css" />
   <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" />
