--- a/templates/member/form.html
+++ b/templates/member/form.html
@@ -1,18 +1,20 @@
-{% load i18n %}
+{% load i18n static %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="MSSmartTagsPreventParsing" content="TRUE" />
+    <meta name="robots" content="noindex, nofollow">
 		<title>Commandes LBCMCP - création de compte</title>
-		<link rel="stylesheet" href="{{ MEDIA_URL }}css/login.css" type="text/css" />
-		<link rel="stylesheet" href="{{ MEDIA_URL }}css/humanity/jquery-ui-1.8.16.custom.css" type="text/css" />
-		
-		<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-1.6.4.min.js"></script>
-		<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-ui-1.8.16.custom.min.js"></script>
-		<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.ui.datepicker-fr.js"></script>
-		
-		<script type="text/javascript" src="{{ MEDIA_URL }}js/base.js"></script>
+    <link rel="stylesheet" href="{% static 'css/humanity/jquery-ui-1.10.3.custom.css' %}" type="text/css" />
+    <link rel="stylesheet" href="{% static 'css/login.css' %}" type="text/css" />
+
+    <script type="text/javascript" src="{% static 'js/jquery-1.9.1.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/jquery-ui.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/jquery.ui.datepicker-fr.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/jquery.autocomplete.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/base.js' %}"></script>
 </head>
 
 <body>
@@ -43,7 +45,7 @@
 			</form>
 		</div>
 		<div id="footer">
-			<a href="{% url 'django'.contrib.auth.views.login %}">>> Retour à la page de connexion</a>
+			<a href="{% url 'django.contrib.auth.views.login' %}">>> Retour à la page de connexion</a>
 		</div>
 	</div>
 </div>
