--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -4,6 +4,8 @@
 
 <head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="MSSmartTagsPreventParsing" content="TRUE" />
+		<meta name="robots" content="noindex, nofollow">
 		<title>BCG-Lab - login</title>
 		<link rel="stylesheet" href="{% static 'css/login.css' %}" type="text/css" />
 		<link rel="stylesheet" href="{% static 'css/humanity/jquery-ui-1.10.3.custom.css' %}" type="text/css" />
