--- a/templates/budgetlines/item.html
+++ b/templates/budgetlines/item.html
@@ -47,7 +47,7 @@
 	</fieldset>
 	
 	<button type="submit" class="check">Valider</button>
-	<a href="{% url 'budgetlines' %}?{{search_args}}" class="back">Retour</a>
+	<a href="{% url 'budgetlines' %}?{{url_args}}" class="back">Retour</a>
 </form>
 
 {% endblock %}
