--- a/templates/history/budgets.html
+++ b/templates/history/budgets.html
@@ -13,7 +13,7 @@
 
 <div class="hide_on_save">
 	<div class="btn_wrapper">
-		<a href="{% url 'history_budget_export' %}?{{search_args}}" class="btn_big">
+		<a href="{% url 'history_budget_export' %}?{{url_args}}" class="btn_big">
 			<img src="{% static 'img/icons/page_excel.png' %}" />Exporter vers Excel
 		</a>
 	</div>
