--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="MSSmartTagsPreventParsing" content="TRUE" />
   <meta name="robots" content="noindex, nofollow">
-  <title>BCG-Lab - {% block title %}{% endblock %}</title>
+  <title>BCG-Lab {{ SITE_NAME }}- {% block title %}{% endblock %}</title>
   <link rel="stylesheet" href="{% static 'css/humanity/jquery-ui-1.10.3.custom.css' %}" type="text/css" />
   <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" />
   <link rel="stylesheet" href="{% static 'css/form.css' %}" type="text/css" />
@@ -36,7 +36,7 @@
       </div>
       <div class="cleaner"></div>
       
-      <h1><a href="{% url 'home' %}">BCG-Lab</a></h1>
+      <h1><a href="{% url 'home' %}">BCG-Lab {{ SITE_NAME }}</a></h1>
       <div class="cleaner"></div>
       
       <!-- start: navigation -->
