--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -4,7 +4,7 @@
 
 <head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<title>Commandes LBCMCP - login</title>
+		<title>BCG-Lab {{SITE_NAME}} - login</title>
 		<link rel="stylesheet" href="{% static 'css/login.css' %}" type="text/css" />
 		<link rel="stylesheet" href="{% static 'css/humanity/jquery-ui-1.8.16.custom.css' %}" type="text/css" />
 		
@@ -24,7 +24,11 @@
 
 <div id="wrapper">
 	<div id="login">
-		<div id="header"><h1>BCG-Lab</h1></div>
+		<div id="header">
+		    <h1>{{ SITE_NAME }}</h1>
+		    <div class="cleaner"></div>
+		    <h2 style="margin-left:20px;color:#64584b">BCG-Lab</h2>
+		</div>
 		<div id="in_login">
 			<div id="login_subhead">Création d'un nouveau compte</div>
 			<form method="POST" action="{% url 'new_user' %}" class="large_labels">{% csrf_token %}
