--- a/templates/history/search_form.html
+++ b/templates/history/search_form.html
@@ -32,7 +32,7 @@
       </tr>
       <tr>
         <td>Désignation:</td>
-        <td>{{ filter_form.items__name }}</td>
+        <td>{{ filter_form.items__name__icontains }}</td>
         <td width="5%"></td>
         <td>Référence:</td>
         <td>{{ filter_form.items__reference }}</td>
