--- a/templates/history/search_form_budgets.html
+++ b/templates/history/search_form_budgets.html
@@ -33,7 +33,7 @@
         <td>{{ filter_form.nature }}</td>
         <td width="10%"></td>
         <td>Désignation:</td>
-        <td>{{ filter_form.product }}</td>
+        <td>{{ filter_form.product__icontains }}</td>
       </tr>
       <tr>
         <td>Fournisseur:</td>
