--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -28,7 +28,7 @@
 		<div id="header">
 		    <h1>{{ SITE_NAME }}</h1>
 		    <div class="cleaner"></div>
-		    <h2 style="margin-left:20px;color:#64584b">BCG-Lab</h2>
+		    <h2 style="margin-left:20px;color:#a08d7b">BCG-Lab</h2>
 		</div>
 		<div id="in_login">
 			<div id="login_subhead">Identification</div>
