--- a/templates/provider/delete.html
+++ b/templates/provider/delete.html
@@ -9,7 +9,7 @@
 {% block content %}
 <p>
   La suppression d'un fournisseur est définitive et l'ensemble
-  des produits et commandes lui étant rattachées seront 
+  des produits et commandes lui étant rattachés seront 
   également supprimés.
 </p>
 
