--- a/templates/500.html
+++ b/templates/500.html
@@ -2,18 +2,8 @@
 
 {% block content %}
 <h2>Une erreur a été détectée</h2>
-<br />
-<h3>Raisons possibles d'apparition de cette erreur:</h3>
-<ul>
-  <li>Accès non-autorisé à la page demandée</li>
-  <li>La page demandée est introuvable</li>
-  <li>
-    Bug de l'application sur la page demandée. Dans ce cas, merci de
-    copier/coller le texte suivant et de le reporter dans la page suivante:
-    {% url 'issue_new' %}
-  </li>
-</ul>
-
-<h3>Traceback</h3>
-{{ traceback|linebreaks }}
+<p>
+    Un email contenant tous les détails de l'erreur a été envoyé aux administrateurs de l'application.
+    Le problème sera résolu dès que possible.
+</p>
 {% endblock %}
