--- a/templates/budgetlines/index.html
+++ b/templates/budgetlines/index.html
@@ -81,9 +81,7 @@
 					<td>{{ budget_line.get_budget_type_display|default:"" }}</td>
 					<td>{{ budget_line.provider|default:"" }}</td>
 					<td>{{ budget_line.offer|default:"" }}</td>
-					<td title="{{ budget_line.product|default:""}}">
-						{{ budget_line.product|default:""|truncatewords:6 }}
-					</td>
+					<td title="{{ budget_line.product|default:""}}">{{ budget_line.product|default:""|truncatewords:6 }}</td>
 					<td style="color:green">{{ budget_line.credit|default:"" }}</td>
 					<td style="color:red">{{ budget_line.debit|default:"" }}</td>
 					<td>{{ budget_line.quantity|default:1 }}</td>
