--- a/templates/provider/import.html
+++ b/templates/provider/import.html
@@ -29,6 +29,8 @@
 			<li class="ui-state-default">Conditionnement</li>
 			<li class="ui-state-default">Nomenclature</li>
 			<li class="ui-state-default">Fournisseur d'origine</li>
+			<li class="ui-state-default">Offre</li>
+			<li class="ui-state-default">Expiration</li>
 		</ul>
 	</fieldset>
 	<input type="hidden" name="column_order" value="" />
