--- a/templates/product/index.html
+++ b/templates/product/index.html
@@ -83,6 +83,7 @@
             {% endfor %}
         </tbody>
     </table>
+    {% autopaginate current_page search_count %}
 {% endif %}
 
 <div id="addToCart" class="dialog" title="Saisissez la quantité à commander">
